--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -15,10 +15,11 @@
 site_name: "Project Documentation"
 
 #TODO: Change to your GitHub Pages URL.
-site_url: https://denisecase.github.io/datafun-01-foundations/
+site_url: https://tgoode01.github.io/datafun-01-foundations
+
 
 #TODO: Change to your GitHub repository URL.
-repo_url: https://github.com/denisecase/datafun-01-foundations
+repo_url: https://github.com/TGoode01/datafun-01-foundations
 
 site_description: Project documentation.
 
@@ -30,7 +31,7 @@ extra:
   social:
     - icon: fontawesome/brands/github
       #TODO: Change to your GitHub repository URL.
-      link: https://github.com/denisecase/datafun-01-foundations
+      link: https://github.com/TGoode01/datafun-01-foundations
 
 # WHY: Material theme is industry standard, well-documented, and low maintenance.
 # CUSTOM: Explore other themes at https://mkdocs.org/about/themes/
